k3s/idemiafoot-back/backend-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: idemiafoot
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: idemiafoot
spec:
  selector:
    matchLabels:
      app: backend
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: loicverniere/idemiafoot-back:main
          name: backend
          ports:
            - containerPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingressroute
  namespace: idemiafoot
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.dev.foot-idemia.fr`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: backend-service
          port: 3000
  tls:
    secretName: backend-tls
